# qt_app_tester

./: pyproject.toml
qt_app_tester/: __main__.py  example_test.py  some_component.py
src/my_app/: example_test.py
